Fixed issue with alignment

--- a/level5-A/lesson-01/main.scss
+++ b/level5-A/lesson-01/main.scss
@@ -321,9 +321,9 @@ body {
       }
     }
     .try-content{
-      padding-left: 1.7em;
+      padding-left: 2.7em;
       ul{
-        margin-left: 1.4em;
+        margin-left: 1.1em;
         padding: 0;
         line-height: clamp(12px, 3vw, 26px);
       }
