--- a/level5-A/lesson-15/main.scss
+++ b/level5-A/lesson-15/main.scss
@@ -312,13 +312,14 @@ body {
       }
     }
     .try-content{
-      padding-left: 1.7em;
+      padding-left: 2.7em;
       ul{
-        margin-left: 1.4em;
+        margin-left: 1.1em;
         padding: 0;
         line-height: clamp(12px, 3vw, 26px);
       }
     }
+    
     footer {
       width: 29%;
       text-align: left;
